--- a/branded.html
+++ b/branded.html
@@ -496,7 +496,7 @@
           <label class="c-page-header__title moves-out"> School <em>of</em> Veterinary Medicine </label>
         </div>
         <li class="has-children ">
-          <a href="#">About</a>
+          <a href="#">Mission &amp; Values</a>
           <ul class="ttu-secondary-nav is-hidden">
             <div class="c-page-header__mobile">
               <label class="c-page-header__title moves-out"> School <em>of</em> Veterinary Medicine </label>
@@ -516,35 +516,7 @@
                 <li><a href="https://www.depts.ttu.edu/vetschool/about/why-we-are-here/core-values/index.php">Core Values</a></li>
               </ul>
             </li>
-            <li class="has-children ">
-              <a href="https://www.depts.ttu.edu/vetschool/about/general/index.php">General</a>
-              <ul class="is-hidden ">
-                <div class="c-page-header__mobile">
-                  <label class="c-page-header__title moves-out"> School <em>of</em> Veterinary Medicine <br>
-                  <span class="title--location">General</span>
-                  </label>
-                </div>
-                <li class="go-back"><a href="#0">Back</a></li>
-                <li><a href="https://www.depts.ttu.edu/vetschool/about/general/accreditation/index.php">Accreditation Status</a></li>
-                <li><a href="https://www.depts.ttu.edu/vetschool/about/general/executive-leadership/index.php">Executive Leadership Team</a></li>
-                <li><a href="/vetschool/about/general/svm-org-chart-september-2022.pdf">Organizational Chart</a></li>
-                <li><a href="https://www.depts.ttu.edu/vetschool/about/general/licensure/index.php">Licensure</a></li>
-                <li><a href="https://texastechuniversity.sharepoint.com/:u:/s/Test1232/ETxGOSPp5JxJgTkuLannpdsBcL6pDT_2hgrKA24qE9SuaQ?e=XSosDO">SVM Intranet</a></li>
-              </ul>
-            </li>
-            <li class="has-children ">
-              <a href="https://www.depts.ttu.edu/vetschool/about/facilities/index.php">Facilities</a>
-              <ul class="is-hidden ">
-                <div class="c-page-header__mobile">
-                  <label class="c-page-header__title moves-out"> School <em>of</em> Veterinary Medicine <br>
-                  <span class="title--location">Facilities</span>
-                  </label>
-                </div>
-                <li class="go-back"><a href="#0">Back</a></li>
-                <li><a href="https://www.depts.ttu.edu/vetschool/about/facilities/amarillo-campus/index.php">Amarillo Campus</a></li>
-                <li><a href="https://www.depts.ttu.edu/vetschool/about/facilities/mariposa-station/index.php">Mariposa Station</a></li>
-              </ul>
-            </li>
+
             <li class="has-children ">
               <a href="https://www.depts.ttu.edu/vetschool/about/meet-our-team/index.php">Directory</a>
               <ul class="is-hidden ">
@@ -558,37 +530,7 @@
                 <li><a href="https://www.depts.ttu.edu/vetschool/about/meet-our-team/staff/index.php">Staff</a></li>
               </ul>
             </li>
-            <li class="has-children ">
-              <a href="https://www.depts.ttu.edu/vetschool/about/giving/index.php">Giving</a>
-              <ul class="is-hidden ">
-                <div class="c-page-header__mobile">
-                  <label class="c-page-header__title moves-out"> School <em>of</em> Veterinary Medicine <br>
-                  <span class="title--location">Giving</span>
-                  </label>
-                </div>
-                <li class="go-back"><a href="#0">Back</a></li>
-                <li><a href="https://www.depts.ttu.edu/vetschool/about/giving/giving-overview/index.php">The Future of Veterinary Medicine Has Arrived</a></li>
-                <li><a href="https://www.depts.ttu.edu/vetschool/about/giving/student-success/index.php">Student Success</a></li>
-                <li><a href="https://www.depts.ttu.edu/vetschool/about/giving/research-discovery-innovation/index.php">Research, Discovery &amp; Innovation</a></li>
-                <li><a href="https://www.depts.ttu.edu/vetschool/about/giving/real-world-experiential-learning/index.php">Real-World, Experiential Learning</a></li>
-                <li><a href="https://www.depts.ttu.edu/vetschool/about/giving/deans-excellence-fund/index.php">Dean's Excellence Fund</a></li>
-                <li><a href="https://www.depts.ttu.edu/vetschool/about/giving/naming-opportunities/index.php">Naming Opportunities</a></li>
-                <li><a href="https://www.depts.ttu.edu/vetschool/about/giving/dalton-memorial-scholarship/index.php">Contribute to the Dalton Horn Memorial Scholarship</a></li>
-              </ul>
-            </li>
-            <li class="has-children ">
-              <a href="https://www.depts.ttu.edu/vetschool/about/contact-us/index.php">Contact Us</a>
-              <ul class="is-hidden ">
-                <div class="c-page-header__mobile">
-                  <label class="c-page-header__title moves-out"> School <em>of</em> Veterinary Medicine <br>
-                  <span class="title--location">Contact Us</span>
-                  </label>
-                </div>
-                <li class="go-back"><a href="#0">Back</a></li>
-                <li><a href="https://www.depts.ttu.edu/vetschool/about/contact-us/all-departments/index.php">All Departments</a></li>
-                <li><a class="mail " href="mailto:svm.itsupport@ttu.edu">SVM IT Support Request</a></li>
-              </ul>
-            </li>
+
           </ul>
         </li>
         <li class="has-children ">
